# local_cdn-fetcher

./: .gitignore  Cargo.toml  LICENSE  cabal.project
source/npm/fetcher/: Cargo.toml
source/npm/fetcher/src/: lib.rs
source/npm/fetcher_bin/: Cargo.toml
source/npm/fetcher_bin/src/: main.rs
source/npm/registry/: Cargo.toml
source/npm/registry/src/: lib.rs
utils/hs/nodejs-semver/: nodejs-semver.cabal
utils/hs/nodejs-semver/src/Data/: SemVer.hs
utils/hs/nodejs-semver/test/: Main.hs
utils/rs/log-utils/: Cargo.toml
utils/rs/log-utils/src/: lib.rs
utils/rs/misc-utils/: Cargo.toml
utils/rs/misc-utils/src/: lib.rs
utils/rs/nix-prefetch/: Cargo.toml
utils/rs/nix-prefetch/src/: lib.rs
website/ajax.googleapis.com/: unsupported.txt
website/ajax.googleapis.com/html/: ajax-googleapis-com.cabal
website/ajax.googleapis.com/html/app/parse-html/: Main.hs
website/ajax.googleapis.com/html/src/Website/AjaxGoogleApis/: Html.hs  Lib.hs  Npm.hs  Types.hs
website/ajax.googleapis.com/update-rs/: Cargo.toml
website/ajax.googleapis.com/update-rs-bin/: Cargo.toml
website/ajax.googleapis.com/update-rs-bin/failed/: dojo.json  npm.json  three.json
website/ajax.googleapis.com/update-rs-bin/src/: main.rs
website/ajax.googleapis.com/update-rs/src/: lib.rs
