[package]
name = "npm-fetcher"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json", "gzip"] }
serde.workspace = true
thiserror.workspace = true
futures = { version = "0.3.30", default-features = false, features = ["std"] }
tokio.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
misc-utils.workspace = true
log-utils.workspace = true
npm-registry = { path = "../registry" }
