[package]
name = "npm_fetcher_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.4.0", features = ["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = [
  "http2",
  "rustls-tls",
  "gzip",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "time"] }
tracing = "0.1.40"
npm-registry = { path = "../registry" }
npm-fetcher = { path = "../fetcher" }
log-utils = { path = "../../../utils/rs/log-utils" }
