[package]
name = "npm_fetcher_bin"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
log-utils = { workspace = true, features = ["progress"] }
npm-registry = { path = "../registry" }
npm-fetcher = { path = "../fetcher" }
