[package]
name = "npm-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-semver = "2.1.0"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
ssri = { version = "9.2.0", features = ["serde"] }
tracing = "0.1.40"
misc-utils = { path = "../../../utils/rs/misc-utils" }
