[package]
name = "npm-registry"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-semver = "2.1.0"
serde.workspace = true
thiserror.workspace = true
ssri = { version = "9.2.0", features = ["serde"] }
tracing.workspace = true
misc-utils.workspace = true
