cabal-version: 3.0
name:          nodejs-semver
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Lane
build-type:    Simple

library
    exposed-modules:  Data.SemVer
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        text >=2.0.2 && <2.1,
        attoparsec >=0.14.4 && <0.15

test-suite nodejs-semver-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        text,
        hspec >=2.11 && <2.12,
        nodejs-semver
