[package]
name = "log-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
tracing = "0.1.40"
indicatif = { version = "0.17.8", optional = true }
tracing-indicatif = { version = "0.3.6", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "env-filter",
  "json",
] }

[features]
default = ["progress"]
progress = ["dep:indicatif", "dep:tracing-indicatif"]
