[package]
name = "log-utils"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
serde.workspace = true
tracing.workspace = true
indicatif = { workspace = true, optional = true }
tracing-indicatif = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "env-filter",
  "json",
] }

[features]
default = ["progress"]
progress = ["dep:indicatif", "dep:tracing-indicatif"]
