[package]
name = "google-ajax-bin"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest = { workspace = true, features = ["gzip"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tracing.workspace = true
log-utils = { workspace = true, features = ["progress"] }
npm-registry.workspace = true
# jquery-fetcher = { path = "../../../library/jquery/fetcher" }
three-js = { path = "../../../library/three.js/fetcher" }
dojo-fetcher = { path = "../../../library/dojo/fetcher" }
google-ajax = { path = "../update-rs" }
