[package]
name = "google-ajax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
reqwest = { version = "0.12.4", default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
misc-utils = { path = "../../../utils/rs/misc-utils" }
npm-registry = { path = "../../../source/npm/registry" }
npm-fetcher = { path = "../../../source/npm/fetcher" }
# jquery-fetcher = { path = "../../../library/jquery/fetcher" }
three-js = { path = "../../../library/three.js/fetcher" }
dojo-fetcher = { path = "../../../library/dojo/fetcher" }
