[package]
name = "google-ajax"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
misc-utils.workspace = true
npm-registry.workspace = true
npm-fetcher = { path = "../../../source/npm/fetcher" }
# jquery-fetcher = { path = "../../../library/jquery/fetcher" }
three-js = { path = "../../../library/three.js/fetcher" }
dojo-fetcher = { path = "../../../library/dojo/fetcher" }
